--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
   "devDependencies": {
     "@types/three": "^0.173.0",
     "vite": "^6.1.0"
+  },
+  "scripts": {
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
